[tool.poetry]
name = "tableturf-replica"
version = "0.0.1"
description = "tableturf-replica python sdk"
authors = ["koishi <qwq@koishi.top>"]
packages = [{include = "tableturf_replica", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typeguard = "^2.13.3"
websockets = "^10.4"
tableturf-replica-internal = {path = "../src/core"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
python_files = ["tests/*.py"]

[tool.poetry.scripts]
demo = "tableturf_replica.demo.dummy:main"
