[tool.poetry]
name = "tableturf-replica-test"
version = "0.1.0"
description = ""
authors = ["koishi <qwq@koishi.top>"]

[tool.poetry.dependencies]
python = "^3.6"
tableturf-replica = {path = "../.."}

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--ignore=third_party"]
python_files = ["test_*.py"]
